fix extra margin

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700%7CRoboto+Slab:400,700');
 @import url('https://fonts.googleapis.com/css?family=Caveat|Great+Vibes|Tangerine');
-@import "normalize/import-now";
-@import "base/_module";
-@import "features/module";
-@import "partials/module";
-@import "pages/module";
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import 'normalize/import-now';
+@import 'base/_module';
+@import 'features/module';
+@import 'partials/module';
+@import 'pages/module';
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+html {
+	max-width: 100%;
+	overflow-x: hidden;
+}
 
 .content {
 	max-width: $content-width;
